...

            </android.support.design.widget.CollapsingToolbarLayout>

        </android.support.design.widget.AppBarLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/main_recycler_fact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="@{viewModel.mListVisibility ? View.VISIBLE : View.INVISIBLE}"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:adapter="@{viewModel.adapter}"
            tools:divider_item="@{viewModel.dividerItemDecoration}"
...
            android:id="@+id/main_empty_list_layout"
            layout="@layout/activity_main_empty_list"
            android:visibility="@{viewModel.mEmptyVisibility ? View.VISIBLE : View.INVISIBLE}"
            tools:click="@{viewModel.fabClick}" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/main_fab_new_fact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            android:onClick="@{viewModel.fabClick}"
            app:srcCompat="@drawable/ic_plus_one_24dp"
...
