...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    tools:text_font="@{`raleway-regular`}">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/new_fact_text_edittext_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/new_fact_title"
                        android:inputType="textAutoCorrect|textCapSentences|textAutoComplete"
                        android:maxLines="2"
                        android:text="@={viewModel.titleFact}"
...
                        tools:text="20h05"
                        tools:text_font="@{`raleway-medium`}"
                        tools:text_icon="@{viewModel.timeIcon}" />
                </LinearLayout>

                <Button
                    android:id="@+id/new_fact_start_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:background="@drawable/blue_button"
                    android:elevation="8dp"
                    android:onClick="@{viewModel.onClickStart}"
...
